examples/errors/e0106-union.sdm
module example <https://example.com/api> is

  union UnionFoo of
    Foo
    Bar
    Foo
  end

end
